# wormfs

./: Cargo.toml  Dockerfile  README.md  codecov.yml  test_file.txt
.github/workflows/: ci.yml  rust.yml
benches/: chunk_bench.rs  erasure_bench.rs  networking_bench.rs
config/: storage_node.yaml
docs/: chunk_format_api.md  design.md  implementation.md  phase_2a_detailed.md
proto/: wormfs.proto
scripts/: mount_wormfs.sh  validate.sh
src/: chunk_format.rs  chunk_placement.rs  disk_manager.rs  erasure.rs  erasure_coding.rs  integrity_checker.rs  lib.rs  main.rs  metadata_store.rs  networking.rs  peer_authorizer.rs  peer_manager.rs  storage_layout.rs  storage_node.rs
src/file_system/: chunk.rs  file.rs  mod.rs  stripe.rs
tests/: chunk_format_tests.rs  erasure_tests.rs  integration_tests.rs  multi_node_tests.rs  networking_tests.rs  reconnection_tests.rs  storage_layout_tests.rs  stress_tests.rs  test_helpers.rs
