[package]
name = "wormfs"
version = "0.1.0"
edition = "2024"

[dependencies]
fuser = "0.12"
libc = "0.2"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
redb = "2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
reed-solomon-novelpoly = "2.0.0"
