[package]
name = "wormfs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A distributed, erasure-coded filesystem with configurable redundancy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/wormfs"
homepage = "https://github.com/yourusername/wormfs"
documentation = "https://docs.rs/wormfs"
keywords = ["filesystem", "distributed", "erasure-coding", "storage", "fuse"]
categories = ["filesystem", "network-programming"]
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Networking
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "kad", "macros", "tokio"] }
tonic = "0.10"
tonic-build = "0.10"
prost = "0.12"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Erasure coding
reed-solomon-erasure = "6.0"

# Cryptography
crc32fast = "1.3"
sha2 = "0.10"

# FUSE filesystem
fuser = "0.14"

# Configuration
clap = { version = "4.0", features = ["derive"] }
config = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
bytes = "1.0"
futures = "0.3"
once_cell = "1.19"

# System calls (for disk space checking)
libc = "0.2"

# Windows API (for disk space checking on Windows)
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winbase"] }

# Web interface
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "wormfs"
path = "src/main.rs"

[[bench]]
name = "chunk_bench"
harness = false

[[bench]]
name = "erasure_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true

[profile.test]
debug = true

[workspace]
members = [
    ".",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
